2002-07-23  Ray Tomlinson  <RTomlinson@bbn.com>

	* TaskImpl.java: 
	Bug #1760 -- publishRemove of subtask still in a workflow should fail
	If debug is enabled, include a throwable in the log message to
	identify the caller.

2002-07-19  Ray Tomlinson  <RTomlinson@bbn.com>

	* TaskImpl.java:
	Bug #1760 -- publishRemove of subtask still in a workflow should fail
	It should be illegal to remove a subtask from the logplan while it
	is still part of a workflow. Doing so leaves unpublished plan
	elements dangling from the workflow. Perhaps, removal from the
	workflow should be automatic. but that would be an API change.
	Instead throw a runtime exception to catch these cases so they can
	be fixed.

2002-07-10  Ray Tomlinson  <RTomlinson@bbn.com>

	* ScoringFunction.java:
	Bug #1568 -- Universal Allocator result aspects don't match
	Supply aspect type when constructing AspectScorePoints. The
	ConstantScoringFunction constructor provided no way to specify the
	aspect type, so the constructors now have an additional aspect
	type argument. ScoringFunctions with multiple AspectValue or
	AspectScorePoint parameters do not check for homogeneity of aspect
	types across all such parameters. Only the first such parameter is
	used as the source for all constructed AspectValues and
	AspectScorePoints. This is _not_ a feature; it's for the sake of
	efficiency. Don't abuse it.

	* AspectScorePoint.java:
	Bug #1568 -- Universal Allocator result aspects don't match
	Change constructor to require aspectType instead of setting to 0.
	This is the source of the incorrect aspect types. All uses of the
	bad constructor I found were in ScoringFunction.java.

2002-02-25  Ray Tomlinson  <RTomlinson@bbn.com>

	* ScoringFunction.java:
	Fix Bug 1101
	Add equals methods to all ScoringFunction implementations.

2001-11-26  Ray Tomlinson  <RTomlinson@bbn.com>

	* AssetVerificationImpl.java:
	Include the schedule in the toString value to aid in debugging.

	* AssignedRelationshipElementImpl.java: